[package]
name = "essay"
version = "0.1.0"
edition = "2024"
description = "Generates tests for functions from attribute macros."

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
duckdb = { version = "1.10501.0", features = ["bundled"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
